--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,3 +160,51 @@ nav ul li{
     padding: 20px;
     margin: 10px;
 }
+
+.proyectos{
+    background-color: var(--bg-color);
+    padding: 32px 0;
+    margin-top: 2rem;
+}
+.proyectos h2{
+    text-align: center;
+    margin-bottom: var(--bottom-margin);
+}
+.foto-proyecto{
+    width: 65%;
+    height: 60%;
+}
+
+.contenedor-proyectos{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.titulo-proyecto{
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.contenedor-proyectos-in{
+    text-align: center;
+    width: 21.875rem;
+    padding: 1rem;
+}
+
+.contenedor-proyectos-in p{
+    padding: 0.4rem;
+}
+
+.descripcion-proyecto{
+    margin-bottom: var(--bottom-margin);
+}
+
+.tarjeta-proyectos{
+    background-color: #fff;
+    color: #000;
+    border-radius: 11px;
+    box-shadow: 0 3px 10px var(--primary-shadow);
+    padding: 20px;
+    margin: 10px;
+}
