--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,9 @@ nav ul li{
     gap: 2.5rem;
     max-width: 68.75rem;
     margin: auto;
-    margin-top: var(--top-margin);
+   /*margin-top: var(--top-margin);*/
+   height: 100vh;
+
 }
 .sobremi img{
     height: 22.5rem;
@@ -124,7 +126,7 @@ nav ul li{
 .mas-sobre{
     background-color: var(--bg-color);
     padding: 1rem 6rem;
-    margin-top: var(--top-margin);
+    margin-top: 2rem;
 }
 
 .mas-sobre h2{
@@ -141,7 +143,7 @@ nav ul li{
     max-width: 68.75rem;
     margin: auto;
     text-align: center;
-    margin-top: 2.5rem;
+    margin-top: 2rem;
 }
 
 .habilidades h2{
@@ -207,4 +209,71 @@ nav ul li{
     box-shadow: 0 3px 10px var(--primary-shadow);
     padding: 20px;
     margin: 10px;
+}
+
+.contacto{
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+}
+.contacto h2{
+    text-align: center;
+    margin-bottom: var(--bottom-margin-2);
+}
+
+.contenedor-contacto{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 9rem;
+}
+
+.contenedor-formulario form{
+    display: flex;
+    flex-direction: column;
+    max-width: 40.75rem;
+    padding: 0.938rem;
+    border-radius: 5px;
+    box-shadow: 0 3px 10px var(--secondary-shadow);
+}
+
+.contenedor-formulario label{
+    line-height: 2.7em;
+    font-weight: var(--bold-font);
+    color: var(--secondary-text-color);
+}
+
+.contenedor-formulario textarea{
+    min-height: 6.25rem;
+    font-size: 14px;
+}
+
+.input-field{
+    width: 100%;
+    height: 1.5rem;
+    padding-top: 10px 0;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+   /* border: 2px outset var(--secondary-text-color);
+    font-size: 0.875rem;*/
+    background-color: transparent;
+}
+
+.submit-btn{
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    background-color: #fff;
+    border: 2px solid var(--secondary-text-color);
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: var(--bold-font);
+    transition: var(--transition);
+}
+
+.submit-btn:hover{
+    background-color: var(--secondary-text-color);
+    border: 2px solid var(--secondary-text-color);
+    cursor: pointer
 }
